testsuite/poke.pkl/computed-diag-6.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int i;
    computed string blah; /* { dg-error "setter" } */
    int j;

    method get_blah = string: { }
  };
